Showing Tool-tip on anchor point
comments need to entered

--- a/theme.css
+++ b/theme.css
@@ -111,7 +111,7 @@ body {
 }
 .plotLines{
 	
-    cursor: pointer;
+    
     stroke: #298A08;
     stroke-width :2;
     stroke-linecap:square;
@@ -131,3 +131,6 @@ body {
     align-items: center;
 
 }
+.plotDots:hover { 
+ fill: #298A08; 
+ } 
