--- a/Styles/theme.css
+++ b/Styles/theme.css
@@ -123,7 +123,7 @@ body {
 }
 .yAxisDivLine
 {
-  stroke-width :0;
+  stroke-width :1;
   
   stroke: #424242;
   stroke-linecap:square;
@@ -178,7 +178,7 @@ body {
  }
  .rect
  {
-  stroke:#202020;
+  stroke:#ffffff;
   stroke-width: 0;
   fill:#f5f5ef;
  }
