--- a/Styles/theme.css
+++ b/Styles/theme.css
@@ -17,7 +17,7 @@ body {
   align-self: center;
   margin: auto;
   padding-right: 20%;
-  padding-top: 1%;
+  padding-top: .5%;
   padding-left: 0%;
   padding-bottom:0%;
   border: 3px solid #ffffff;
@@ -26,7 +26,7 @@ body {
   text-align: center;
   text-decoration: none;
   text-transform: capitalize;
-  font-family: "Times New Roman", Times, serif;
+  font-family: arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 120%;
@@ -39,19 +39,19 @@ body {
   background: #ffffff;
   align-self: center;
   margin: auto;
-  padding-right: 1%;
-  padding-top: 1%;
+  padding-right: 20%;
+  padding-top: .5%;
   padding-left: 0%;
-  padding-bottom:1%;
+  padding-bottom:.5%;
   border: 3px solid #ffffff;
   align-items: center;
   display: block;
   text-align: center;
   text-decoration: none;
   text-transform: capitalize;
-  font-family: "Times New Roman", Times, serif;
+  font-family: arial, sans-serif;
   font-style: normal;
-  font-weight: bold;
+  font-weight: normal;
 }
 .xAxisLabels
 {
@@ -60,8 +60,9 @@ body {
     text-align: center;
     text-decoration: none;
     text-transform: capitalize;
-    font-family: "Times New Roman", Times, serif;
-    font-style: normal;
+   font-family: arial, sans-serif;
+  font-style: normal;
+  font-weight: lighter;
     stroke: #424242;
 }
 .yAxisLabels
@@ -71,8 +72,9 @@ body {
     text-align: center;
     text-decoration: none;
     text-transform: capitalize;
-    font-family: "Times New Roman", Times, serif;
-    font-style: normal;
+   font-family: arial, sans-serif;
+  font-style: normal;
+  font-weight: lighter;
     stroke: #424242;
 }
 .xAxisTitle
@@ -84,8 +86,9 @@ body {
     text-align: center;
     text-decoration: none;
     text-transform: capitalize;
-    font-family: "Times New Roman", Times, serif;
-    font-style: normal;
+    font-family: arial, sans-serif;
+  font-style: normal;
+  font-weight: lighter;
     stroke: #424242;
 }
 .yAxisTitle
@@ -96,8 +99,9 @@ body {
     text-align: center;
     text-decoration: none;
     text-transform: capitalize;
-    font-family: "Times New Roman", Times, serif;
-    font-style: normal;
+    font-family: arial, sans-serif;
+  font-style: normal;
+  font-weight: lighter;
     stroke: #424242;
 }
 .xAxis 
