--- a/Styles/theme.css
+++ b/Styles/theme.css
@@ -55,7 +55,7 @@ body {
 }
 .xAxisLabels
 {
-     fill:#298A08;
+     fill:#000000;
     writing-mode: tb-rl;
     text-align: center;
     text-decoration: none;
@@ -63,38 +63,38 @@ body {
    font-family: arial, sans-serif;
   font-style: normal;
   font-weight: lighter;
-    stroke: #424242;
+    
 }
 .yAxisLabels
 {
   
-     fill:#298A08;
+    fill:#000000;
     text-align: center;
     text-decoration: none;
     text-transform: capitalize;
    font-family:sans-serif;
   font-style: normal;
   font-weight: lighter;
-    stroke: #424242;
+    
 }
 .xAxisTitle
 {
    
    
-     fill:#298A08;
-
+    
+    fill:#000000;
     text-align: center;
     text-decoration: none;
     text-transform: capitalize;
     font-family:sans-serif;
   font-style: normal;
   font-weight: lighter;
-    stroke: #424242;
+    
 }
 .yAxisTitle
 {
    
-     fill:#298A08;
+     fill:#000000;
     writing-mode: tb-rl;
     text-align: center;
     text-decoration: none;
@@ -102,25 +102,26 @@ body {
     font-family: sans-serif;
   font-style: normal;
   font-weight: lighter;
-    stroke: #424242;
+    
 }
 .xAxis 
 {
-  stroke: #424242;
+  stroke: #000000;
   stroke-linecap:square;
   stroke-width:1;
 
 }
 .yAxis
 {
-  stroke: #424242;
+  stroke: #000000;
   stroke-linecap:square;
-  stroke-width :0;
+  stroke-width :1;
 
 }
 .xAxisDivLine
 {
-  stroke: #424242;
+  stroke-width :1;
+  stroke: #000000;
 
   stroke-linecap:square;
 
@@ -129,7 +130,7 @@ body {
 {
   stroke-width :1;
   
-  stroke: #424242;
+  stroke: #000000;
   stroke-linecap:square;
 }
 .chart 
@@ -157,7 +158,7 @@ body {
 {
 	stroke:#0174DF;
 	fill: #ffffff;
-  r:7;
+  r:5;
 }
 .chartContainer
 {
